Fix a bug in the nsclean option of the parser

Raised as a side effect of:
https://bugzilla.gnome.org/show_bug.cgi?id=663844